TFP-6476: Henter kontrakt fra fpkalkulus istedenfor ftberegning for alle beregningsklasser bortsett fra GUI (#1804)