@@ -8,18 +8,17 @@ import static no.nav.foreldrepenger.generator.kalkulus.LagRequestTjeneste.lagHå
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
-import no.nav.folketrygdloven.kalkulus.request.v1.enkel.EnkelBeregnRequestDto;
-import no.nav.folketrygdloven.kalkulus.request.v1.enkel.EnkelHåndterBeregningRequestDto ;
-import no.nav.folketrygdloven.kalkulus.håndtering.v1.fakta.ArbeidstakerandelUtenIMMottarYtelseDto;
-import no.nav.folketrygdloven.kalkulus.håndtering.v1.fakta.FaktaBeregningLagreDto;
-import no.nav.folketrygdloven.kalkulus.håndtering.v1.fakta.FaktaOmBeregningHåndteringDto;
-import no.nav.folketrygdloven.kalkulus.håndtering.v1.fakta.MottarYtelseDto;
-import no.nav.folketrygdloven.kalkulus.håndtering.v1.fakta.RefusjonskravPrArbeidsgiverVurderingDto;
-import no.nav.folketrygdloven.kalkulus.håndtering.v1.fakta.VurderATogFLiSammeOrganisasjonAndelDto;
-import no.nav.folketrygdloven.kalkulus.håndtering.v1.fakta.VurderATogFLiSammeOrganisasjonDto;
 import no.nav.folketrygdloven.kalkulus.response.v1.beregningsgrunnlag.gui.BeregningsgrunnlagDto;
+import no.nav.foreldrepenger.kalkulus.kontrakt.request.EnkelBeregnRequestDto;
+import no.nav.foreldrepenger.kalkulus.kontrakt.request.EnkelHåndterBeregningRequestDto;
+import no.nav.foreldrepenger.kalkulus.kontrakt.request.håndtering.fakta.ArbeidstakerandelUtenIMMottarYtelseDto;
+import no.nav.foreldrepenger.kalkulus.kontrakt.request.håndtering.fakta.FaktaBeregningLagreDto;
+import no.nav.foreldrepenger.kalkulus.kontrakt.request.håndtering.fakta.FaktaOmBeregningHåndteringDto;
+import no.nav.foreldrepenger.kalkulus.kontrakt.request.håndtering.fakta.MottarYtelseDto;
+import no.nav.foreldrepenger.kalkulus.kontrakt.request.håndtering.fakta.RefusjonskravPrArbeidsgiverVurderingDto;
+import no.nav.foreldrepenger.kalkulus.kontrakt.request.håndtering.fakta.VurderATogFLiSammeOrganisasjonAndelDto;
+import no.nav.foreldrepenger.kalkulus.kontrakt.request.håndtering.fakta.VurderATogFLiSammeOrganisasjonDto;
 
 public class FaktaOmBeregningTjeneste {
 
@@ -46,14 +45,13 @@ public class FaktaOmBeregningTjeneste {
     }
 
 
-    // TODO: Riktig BeregningsgrunnlagDto?
     public static MottarYtelseDto lagMottarYtelseDto(Map<Long, Boolean> mottarYtelseMap, BeregningsgrunnlagDto beregningsgrunnlagDto) {
-        var andeler = beregningsgrunnlagDto.getBeregningsgrunnlagPeriode().get(0).getBeregningsgrunnlagPrStatusOgAndel();
+        var andeler = beregningsgrunnlagDto.getBeregningsgrunnlagPeriode().getFirst().getBeregningsgrunnlagPrStatusOgAndel();
         List<ArbeidstakerandelUtenIMMottarYtelseDto> mottarYtelseDtoList = andeler.stream()
                 .filter(a -> mottarYtelseMap.containsKey(a.getAndelsnr()))
                 .filter(a -> a.getAktivitetStatus().equals(ARBEIDSTAKER))
                 .map(a -> new ArbeidstakerandelUtenIMMottarYtelseDto(a.getAndelsnr(), mottarYtelseMap.get(a.getAndelsnr())))
-                .collect(Collectors.toList());
+                .toList();
         Optional<Boolean> frilansMottarYtelse = andeler.stream()
                 .filter(a -> a.getAktivitetStatus().equals(FRILANSER))
                 .findFirst()
