@@ -3,21 +3,19 @@ package no.nav.foreldrepenger.generator.kalkulus;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import jakarta.validation.Valid;
 import jakarta.validation.constraints.Max;
 import jakarta.validation.constraints.Min;
-import no.nav.folketrygdloven.kalkulus.felles.v1.Periode;
-import no.nav.folketrygdloven.kalkulus.håndtering.v1.fakta.FastsatteAndelerTidsbegrensetDto;
-import no.nav.folketrygdloven.kalkulus.håndtering.v1.fakta.FastsattePerioderTidsbegrensetDto;
-import no.nav.folketrygdloven.kalkulus.håndtering.v1.foreslå.FastsettBGTidsbegrensetArbeidsforholdDto;
-import no.nav.folketrygdloven.kalkulus.håndtering.v1.foreslå.FastsettBGTidsbegrensetArbeidsforholdHåndteringDto;
-import no.nav.folketrygdloven.kalkulus.håndtering.v1.foreslå.FastsettBeregningsgrunnlagATFLHåndteringDto;
-import no.nav.folketrygdloven.kalkulus.håndtering.v1.foreslå.InntektPrAndelDto;
-import no.nav.folketrygdloven.kalkulus.håndtering.v1.foreslå.VurderVarigEndretArbeidssituasjonHåndteringDto;
-import no.nav.folketrygdloven.kalkulus.håndtering.v1.foreslå.VurderVarigEndringEllerNyoppstartetDto;
-import no.nav.folketrygdloven.kalkulus.håndtering.v1.foreslå.VurderVarigEndringEllerNyoppstartetSNHåndteringDto;
+import no.nav.foreldrepenger.kalkulus.kontrakt.request.håndtering.fakta.FastsatteAndelerTidsbegrensetDto;
+import no.nav.foreldrepenger.kalkulus.kontrakt.request.håndtering.fakta.FastsattePerioderTidsbegrensetDto;
+import no.nav.foreldrepenger.kalkulus.kontrakt.request.håndtering.foreslå.FastsettBGTidsbegrensetArbeidsforholdDto;
+import no.nav.foreldrepenger.kalkulus.kontrakt.request.håndtering.foreslå.FastsettBGTidsbegrensetArbeidsforholdHåndteringDto;
+import no.nav.foreldrepenger.kalkulus.kontrakt.request.håndtering.foreslå.FastsettBeregningsgrunnlagATFLHåndteringDto;
+import no.nav.foreldrepenger.kalkulus.kontrakt.request.håndtering.foreslå.InntektPrAndelDto;
+import no.nav.foreldrepenger.kalkulus.kontrakt.request.håndtering.foreslå.VurderVarigEndringEllerNyoppstartetDto;
+import no.nav.foreldrepenger.kalkulus.kontrakt.request.håndtering.foreslå.VurderVarigEndringEllerNyoppstartetSNHåndteringDto;
+import no.nav.foreldrepenger.kalkulus.kontrakt.typer.Periode;
 
 public class ForeslåBeregningTjeneste {
 
@@ -33,9 +31,9 @@ public class ForeslåBeregningTjeneste {
             var fastsatteAndeler = periodeEntry.getValue().entrySet()
                     .stream()
                     .map(e -> new FastsatteAndelerTidsbegrensetDto(e.getKey(), e.getValue()))
-                    .collect(Collectors.toList());
+                    .toList();
             return new FastsattePerioderTidsbegrensetDto(periodeEntry.getKey().getFom(), periodeEntry.getKey().getTom(), fastsatteAndeler);
-        }).collect(Collectors.toList());
+        }).toList();
         return new FastsettBGTidsbegrensetArbeidsforholdHåndteringDto(
                 new FastsettBGTidsbegrensetArbeidsforholdDto(fastsatteTidsbegrensetPerioder, frilansInntekt)
         );
@@ -44,29 +42,23 @@ public class ForeslåBeregningTjeneste {
     public static FastsettBeregningsgrunnlagATFLHåndteringDto fastsettInntektVedAvvik(Map<Long, Integer> årsinntektPrArbeidstakerAndel) {
         var inntektPrAndelList = årsinntektPrArbeidstakerAndel.entrySet().stream()
                 .map(e -> new InntektPrAndelDto(e.getValue(), e.getKey()))
-                .collect(Collectors.toList());
-        return new FastsettBeregningsgrunnlagATFLHåndteringDto(inntektPrAndelList, null);
+                .toList();
+        return new FastsettBeregningsgrunnlagATFLHåndteringDto(inntektPrAndelList, null, List.of());
     }
 
     public static FastsettBeregningsgrunnlagATFLHåndteringDto fastsettInntektVedAvvik(Map<Long, Integer> årsinntektPrArbeidstakerAndel, Integer frilansinnekt) {
         var inntektPrAndelList = årsinntektPrArbeidstakerAndel.entrySet().stream()
                 .map(e -> new InntektPrAndelDto(e.getValue(), e.getKey()))
-                .collect(Collectors.toList());
-        return new FastsettBeregningsgrunnlagATFLHåndteringDto(inntektPrAndelList, frilansinnekt);
+                .toList();
+        return new FastsettBeregningsgrunnlagATFLHåndteringDto(inntektPrAndelList, frilansinnekt, List.of());
     }
 
     public static FastsettBeregningsgrunnlagATFLHåndteringDto fastsettInntektVedAvvik(Integer frilansinntekt) {
-        return new FastsettBeregningsgrunnlagATFLHåndteringDto(Collections.emptyList(), frilansinntekt);
+        return new FastsettBeregningsgrunnlagATFLHåndteringDto(Collections.emptyList(), frilansinntekt, List.of());
     }
 
     public static VurderVarigEndringEllerNyoppstartetSNHåndteringDto fastsettInntektVarigEndring(Integer beløpPrÅr, boolean erVarigEndring) {
         var varigEndringDto = new VurderVarigEndringEllerNyoppstartetDto(erVarigEndring, beløpPrÅr);
         return new VurderVarigEndringEllerNyoppstartetSNHåndteringDto(varigEndringDto);
     }
-
-    public static VurderVarigEndretArbeidssituasjonHåndteringDto fastsettInntektVarigEndretArbeidssitausjon(Integer beløpPrÅr, boolean erVarigEndring) {
-        var varigEndringDto = new VurderVarigEndringEllerNyoppstartetDto(erVarigEndring, beløpPrÅr);
-        return new VurderVarigEndretArbeidssituasjonHåndteringDto(varigEndringDto);
-    }
-
 }
